--- a/yy.html
+++ b/yy.html
@@ -1,55 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f8f8;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            background-color: #4CAF50;
-            color: white;
-            margin: 8px 0;
-            padding: 15px;
-            text-align: center;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        li:hover {
-            background-color: #45a049;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SMS 인증</title>
 </head>
 <body>
-    <ul>
-        
-        <li onclick="showInfo('아티언스', 2022)">
-            아티언스 / 2022
-        </li>
-        <li onclick="showInfo('아티언스', 2023)">
-            아티언스 / 2023
-        </li>
-        <li onclick="showInfo('아티언스', 2023)">
-            아티언스 / 2023
-        </li>
-        <li onclick="showInfo('아티언스', 2023)">
-            아티언스 / 2023
-        </li>
-        <img src="" alt="">
-    </ul>
-    <a href="https://wnghdcjfe.github.io/a.html" target="_blank" rel="noopener noreferrer"></a> 
+  <h1>SMS 인증</h1>
+  <!-- SMS 링크 -->
+  <a href="sms:01093529632?body=인증번호는 123456 입니다.">인증 메시지 보내기</a>
 </body>
 </html>
